[package]
name = "logslice"
version = "0.1.0"
edition = "2021"
description = "Fast CLI tool for filtering and slicing structured log files by time range or field value"
license = "MIT"
repository = "https://github.com/user/logslice"
keywords = ["log", "cli", "json", "filter", "slice"]
categories = ["command-line-utilities"]

[[bin]]
name = "logslice"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
